--- a/templates/login.html
+++ b/templates/login.html
@@ -29,13 +29,13 @@
     function login() {
         $.ajax({
                 //几个参数需要注意一下
-                type: "POST",       //方法类型
-                dataType: "json",   //预期服务器返回的数据类型
-                url: "/login" ,//url
+                type: "POST",           //方法类型
+                dataType: "json",       //预期服务器返回的数据类型
+                url: "/login" ,         //url
                 data: $('#login_form').serialize(),
                 success: function (result) {
                     if (result.status === 200) {
-                        window.load.href = "/question";
+                        window.location.href = "/question";
                     } else {
                         {# 用户名或者密码错误 #}
                         alert(result.message)
