--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/insert">题目录入</a></li>
-                    <li><a href="">试卷组合</a></li>
+                    <li><a href="/student">考生录入</a></li>
+                    <li><a href="/paper/list">查看试卷</a></li>
                     <li><a href="/question">考生抽题</a></li>
                     <li><a href="/list">考生选题</a></li>
                     {% if current_user.is_authenticated %}
