--- a/templates/student.html
+++ b/templates/student.html
@@ -7,10 +7,12 @@
           <table class="table table-bordered table-hover table-responsive">
             <thead>
               <tr class="text-center">
-                  <th class="text-center">题目编号</th>
-                  <th class="text-center">题目类型</th>
-                  <th class="text-center">类型编号</th>
-                  <th class="text-center">题目内容</th>
+                <th class="text-center">序号</th>
+                  <th class="text-center">考生号</th>
+                  <th class="text-center">考生姓名</th>
+                  <th class="text-center">报考类型</th>
+                  <th class="text-center">考场号</th>
+                  <th class="text-center">座号</th>
               </tr>
             </thead>
             <tbody id="tbody_list">
@@ -21,27 +23,31 @@
 
            </ul>
         </div>
-</div>
+    </div>
 
     <div class="col-xs-4">
         <form class="form-horizontal col-md-offset-0" id="test_form" name="login_form">
           <div class="form-group">
-            <label for="type" class="col-sm-4 control-label">题目类型</label>
+            <label for="type" class="col-sm-4 control-label">考生类型</label>
             <div class="col-sm-8">
               <select class="form-control" id="type" name="type">
-                  <option value="0">第一类</option>
-                  <option value="1">第二类</option>
-                  <option value="2">第三类</option>
-                  <option value="3">第四类</option>
-                  <option value="4">第五类</option>
+                  <option value="学硕">学硕</option>
+                  <option value="专硕">专硕</option>
                 </select>
             </div>
           </div>
 
           <div class="form-group">
-            <label for="content" class="col-sm-4 control-label">题目内容</label>
+            <label for="id" class="col-sm-4 control-label">考生号</label>
             <div class="col-sm-8">
-                <textarea  class="form-control" id="content" placeholder="题目内容" name="content"></textarea>
+              <input type="text" class="form-control" id="username" placeholder="用户名" name="id">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="name" class="col-sm-4 control-label">姓名</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control" id="username" placeholder="用户名" name="name">
             </div>
           </div>
 
@@ -54,7 +60,6 @@
     </div>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-
     {# 左侧展示区 #}
     <script type="text/javascript">
         const tbody = document.getElementById("tbody_list");
@@ -63,13 +68,12 @@
 
         {# 分页链接填充  #}
         function href_insert(sum) {
-            console.log(sum);
             let pages = parseInt((sum + page_size - 1) / page_size);
             let href_str = "";
             href_str += "<li><a href=\"#\">&laquo;</a></li>";
             for (let i = 0; i < pages; i++) {
                 let id_name = "href" + (i + 1);
-                href_str += "<li id = \"" + id_name + "\"><a href=\"#\" onclick = \"get_question_list(" + i + ")\">" + (i + 1) + "</a></li>";
+                href_str += "<li id = \"" + id_name + "\"><a href=\"#\" onclick = \"get_student_list(" + i + ")\">" + (i + 1) + "</a></li>";
             }
             href_str += "<li><a href=\"#\">&raquo;</a></li>";
             href_body.innerHTML = href_str;
@@ -80,18 +84,23 @@
             let tbody_str = "";
             tbody.innerHTML = "";
             for (let i = 0; i < lists.length; i++) {
+                let test_room, test_number;
+                test_number = (lists[i].test_number == null) ? "" : lists[i].test_number;
+                test_room = (lists[i].test_room == null) ? "" : lists[i].test_room;
                 tbody_str += "<tr class='active'>" +
-                    "       <td>" + lists[i].id + "</td>" +
-                    "       <td>" + lists[i].question_type + "</td>" +
-                    "       <td>" + lists[i].question_code + "</td>" +
-                    "       <td>" + lists[i].question_content + "</td>" +
+                    "       <th scope='row' class='text-center'>" + (i + 1) + "</th>" +
+                    "       <td>" + lists[i].test_id + "</td>" +
+                    "       <td>" + lists[i].test_name + "</td>" +
+                    "       <td>" + lists[i].test_type + "</td>" +
+                    "       <td>" + test_room + "</td>" +
+                    "       <td>" + test_number + "</td>" +
                     "   </tr>";
             }
             tbody.innerHTML = tbody_str;
         }
 
-        {# 获得试题列表 #}
-        function get_question_list(list_start) {
+        {# 获得学生列表 #}
+        function get_student_list(list_start) {
             {# 当前按钮设置 #}
             let student_input = {
                 data: JSON.stringify({
@@ -103,7 +112,7 @@
                 //几个参数需要注意一下
                 type: "PATCH",                           //方法类型
                 dataType: "json",                       //预期服务器返回的数据类型
-                url: "/question/list",                          //url
+                url: "/student",                          //url
                 data: student_input,
                 success: function (result) {
                     if (result.status === 200) {
@@ -128,7 +137,7 @@
                 //几个参数需要注意一下
                 type: "PATCH",                           //方法类型
                 dataType: "json",                       //预期服务器返回的数据类型
-                url: "/question/list",                          //url
+                url: "/student",                          //url
                 data: student_input,
                 success: function (result) {
                     if (result.status === 200) {
@@ -142,7 +151,6 @@
             });
         }
     </script>
-
     {# 右侧添加区 #}
     <script type="text/javascript">
         function adding() {
@@ -150,19 +158,25 @@
                 //几个参数需要注意一下
                 type: "POST",       //方法类型
                 dataType: "json",   //预期服务器返回的数据类型
-                url: "/insert" ,//url
+                url: "/student" ,//url
                 data: $('#test_form').serialize(),
                 success: function (result) {
                     console.log(result);//打印服务端返回的数据(调试用)
                     if (result.status === 200) {
-                        alert("插入试题成功！");
+                        alert("录入学生信息成功！");
+                    } else if (result.status === 300) {
+                        alert("该生信息已经录入！")
                     }
                 },
                 error : function() {
-                    alert("插入试题失败！");
+                    alert("录入学生信息失败！");
                 }
             });
         }
         document.getElementById("adding").onclick = adding;
+    </script>
+
+    <script type="text/javascript">
+
     </script>
 {% endblock %}
